tests/test_input_files/good/test_good_lambda_8.punkt
main {
	var f = <int x> -> int { return x . }.
	const a = f(1).
	println a.

	f = <int x> -> int { return -x. }.
	const b = f(1).
	println b.
}
