tests/test_input_files/bad/test_bad_return_stmt_9.punkt
function f <> -> int {
	if true {
		return 0.
	} else if false {
		return 0.
	} else {
		var x = 0.
	}
}

main {
	f().
}
